--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,457 @@
-/* defaults */
+    /* defaults */
 
-.body{
-    /* font-family: ; */
-}
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-/* media queries */
+    body{
+        font-family:'Open Sans', sans-serif;
+    }
 
-/* dont use max width for media queries */
+    h1, h2, h3, h4, h5{
+        font-weight: 700;
+    }
+
+    h1{
+        font-size: 4rem;
+    }
+
+    h2{
+        font-size: 2.5rem;
+    }
+
+    h3{
+        font-size: 2rem;
+    }
+    
+    .our-services button, .welcome button, .our-vision-content button{
+        padding: 30px;
+        font-size: 1.5rem;
+    }
+
+    .wrapper{
+        display: block;
+        margin: auto;
+        max-width: 1200px;
+        margin: 10px;
+    }
+
+    header{
+        width: 100%;
+    }
+
+    header ul{
+        background-color: #222;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .image-container{
+        background-color: #c78c06;
+        display: flex;
+    }
+
+    li{
+        padding: 10px;
+    }
+
+    .search{
+        display: inline-block;
+    }
+
+    header a{
+        text-decoration: none;
+        color: #c78c06;
+    }
+
+    header ul li button{
+        background-color: #222;
+        color: #c78c06;
+        border: none;
+    }
+
+    header ul li:hover{
+        background-color: #c78c06;
+        color: #222;
+    }
+
+    header ul a:hover{
+        color: #222;
+    }
+
+    .banner{
+        background-image: url("../images/main-banner.jpg");
+        background-position: center 200px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 900px;
+    }
+    .header-transparent{
+        background-color: #222;
+        position: absolute;
+        opacity: 0.7;
+        display: block;
+        width: 100%;
+        height: 320px;
+        top: 480px;
+    }
+
+    .header-image{
+        display: block;
+        position: absolute;
+        top: 480px;
+        margin: 10px;
+        z-index: 1;
+        color: white;
+    }
+
+    .header-image p, .header-image h1{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .welcome button{
+        background-color:#c78c06;
+        border: none;
+        margin-top: 10px;
+    }
+
+    .welcome button a{
+        color:#222;
+    }
+
+    .about-us{
+        display: block;
+        margin: auto;
+        padding: 10px;
+    }
+    .about-us-content{
+        border: 10px;
+    }
+
+    .about-us img{
+        width: 100%;
+        margin: auto;
+    }
+
+    .about-us-text{
+        margin: 10px;
+        padding-bottom: 10px;
+    }
+
+    .about-us-content, .digital-transformation-container, .marketing-container, .video-production-container, .web-development-container, .print-container, .john-text, .bob-text{
+        background-color: #ffe6ac;
+    }
+
+    .about-us-content h3, .digital-transformation-container h3, .marketing-container h3, .video-production-container h3, .web-development-container h3, .print-container h3{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin: 10px;
+    }
+
+    .about-us-content p{
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+
+    .about-us-content button, .digital-transformation-container button, .marketing-container button, .video-production-container button, .web-development-container button, .print-container button{
+        background-color: #222;
+        color: white;
+        font-size: 1.5rem;
+        margin: 10px;
+        border: none;
+    }
+
+    .digital-transformation-container p, .marketing-container p, .video-production-container p, .web-development-container p, .print-container p{
+        padding-top: 20px;
+        padding-bottom: 10px;
+        margin: 10px;
+    }
+
+    .our-services{
+        display: block;
+        margin: auto;
+        padding: 10px;
+    }
+
+    .digital-transformation-container, .marketing-container, .video-production-container, .web-development-container, .print-container{
+        margin-top: 10px;
+    }
+
+    .our-services img{
+        width: 100%;
+    }
+
+
+    .our-vision{
+        background-image: url("../images/vision.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        height: 300px;
+    }
+
+    .our-vision-content{
+        padding: 20px;
+        position: relative;
+        display: block;
+        margin: auto;
+        color: white;
+    }
+
+    .our-vision p{
+        color: white;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .our-vision button{
+        color: white;
+        background-color:#222;
+        font-size: 1.5rem;
+        border: 2px solid #c78c06;
+    }
+
+    .our-team-header{
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .our-team img{
+        width: 100%;
+    }
+
+
+    .john-text, .bob-text{
+        padding: 10px;
+    }
+
+    .john-text h4, .john-text h3, .john-text p, .bob-text h4, .bob-text h3, .bob-text p{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .contact-us-header{
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+
+    .message-container h3, .message-container form{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .message-container button{
+        background-color: #222;
+        color: #c78c06;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .hours-container h3{
+        margin-top: 10px;
+        margin-bottom: 10px;   
+    }
+
+    table{
+        width: 100%;
+    }
+
+    thead{
+        background-color: #ffe6ac;
+    }
+
+    th{
+        text-align: center;
+    }
+
+    td{
+        padding-left: 15px;
+    }
+
+    th, td{
+        height: 40px;
+        vertical-align: middle;
+    }
+
+    td, thead{
+        border: 1px solid;
+    }
+
+    .location-container h3{
+        margin-top: 15px;
+        margin-bottom: 10px;
+    }
+
+    iframe{
+        width: 100%;
+    }
+
+    footer{
+        background-color: #222;
+        position: absolute;
+        width: 100%;
+    }
+
+    footer p{
+        color: #c78c06;
+        padding: 20px;
+    }
+
+    /* media queries */
+
+    /* dont use max width for media queries */
+
+    @media screen and (min-width:760px){
+        
+        .wrapper{
+            display: block;
+            margin: auto;
+            max-width: 1200px;
+        }
+
+        nav ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        nav li{
+            margin: auto 10px;
+            padding: 30px;
+        }
+
+        .search{
+            margin: auto -40px; 
+        }
+
+        .banner{
+            background-image: url("../images/main-banner.jpg");
+            background-position: center 180px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 800px;
+        }
+        .header-transparent{
+            display: block;
+            width: 75%;
+            margin: auto;
+            height: 500px;
+            right: 200px;
+            top: 250px;
+        }
+    
+        .header-image{
+            display: block;
+            width: 75%;
+            position: absolute;
+            right: 175px;
+            top: 400px;
+            margin: 10px;
+            z-index: 1;
+            color: white;
+        }
+
+        .about-us{
+            display: block;
+            width: 100%;
+            background-color: #ffe6ac;
+        }
+
+        .about-us-content{
+            width: 1200px;
+            display: flex;
+        }
+
+        .our-services{
+            display: grid;
+            grid-template-columns: repeat(6, 3fr);
+            grid-column-gap: 10px;
+            grid-row-gap: 10px;
+        }
+
+        .our-services-header{
+            grid-area: 1 / 1 / 2 / 7;
+        }
+
+        .digital-transformation-container{
+            grid-area: 2 / 1 / 3 / 4;
+        }
+
+        .marketing-container{
+            grid-area: 2 / 4 / 3 / 7;
+        }
+
+        .video-production-container{
+            grid-area: 3 / 1 / 4 / 3;
+        }
+
+        .web-development-container{
+            grid-area: 3 / 3 / 4 / 5;
+        }
+
+        .print-container{
+            grid-area: 3 / 5 / 4 / 7;
+        }
+
+        .our-team{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: stretch;
+        }
+
+        .our-team-header{
+            flex: 100%;
+            order: 0;
+        }
+
+        .john-image{
+            flex-basis: 49%;
+            order: 1;
+        }
+
+        .john-text{
+            flex-basis: 49%;
+            order: 2;
+        }
+
+        .bob-image{
+            flex-basis: 49%;
+            order: 4;
+        }
+
+        .bob-text{
+            flex-basis: 49%;
+            order: 3;
+        }
+
+        .contact-us{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: stretch; 
+        }
+
+        .contact-us-header{
+            order: 0;
+            flex-basis: 100%;
+        }
+
+        .message-container{
+            order: 1;
+            flex-basis: 50%;
+        }
+
+        .hours-container{
+            order: 3;
+            flex-basis: 100%;
+        }
+
+        .location-container{
+            order: 2;
+            flex-basis: 50%;
+        }
+
+        th, td{
+            height: 60px;
+            vertical-align: middle;
+        }
+    }
